# coil

./: .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
.cache/clangd/index/: abi_macros.hpp.412622015997D3C7.idx  adl_serializer.hpp.C30AB65C58EA2701.idx  ansicolor_sink-inl.h.0E4F53513A16BCBF.idx  ansicolor_sink.h.72B0C3CCAD37C846.idx  async.cpp.11D1623AC22A9D17.idx  async.h.3B8DB1D833B2AF09.idx  async_logger-inl.h.07D0741CA94E9648.idx  async_logger.h.46E3A881858C6C9C.idx  backtracer-inl.h.DF792E37F76C7A2C.idx  backtracer.h.F169F9185EE08A99.idx  base.h.9889142ED8A17A6B.idx  base_sink-inl.h.F5A79A588F1ABB7C.idx  base_sink.h.C79073249607639D.idx  basic_file_sink-inl.h.3240B21089AFA722.idx  basic_file_sink.h.D99C3070148DD1D8.idx  begin.hpp.DE72B76823E99B12.idx  binary_reader.hpp.211A0CD240AE79C2.idx  binary_writer.hpp.C49C87DF5F1B19BC.idx  bundled_fmtlib_format.cpp.CBB8F714543DF731.idx  byte_container_with_subtype.hpp.154E9C2AD29546E3.idx  cfg.cpp.92103E6592602F92.idx  circular_q.h.5ABA1BA0F8F80F9A.idx  coil.cpp.4A393D43F5C6B449.idx  coil.h.0E10FC5FB7998FF7.idx  color_sinks.cpp.594D217313FAE288.idx  common-inl.h.408F2C0189209DFD.idx  common.h.41FF23C586E9A055.idx  configParser.cpp.94DCF5EACDCFCA2A.idx  configParser.h.F22771EDB3F7BF8D.idx  console_globals.h.D91FB09C4D5D99E9.idx  core.h.83B7CEB77F467AF4.idx  cpp_future.hpp.D0880EB291884744.idx  detected.hpp.CAF05C3C2BE6FE1A.idx  end.hpp.6EC086DFFE192479.idx  exceptions.hpp.2AE18B567FBE6811.idx  file_helper-inl.h.5738FF805D82733A.idx  file_helper.h.2BA826C6C8686F95.idx  file_sinks.cpp.75D051CD458C69B6.idx  fmt.h.B0921CA72676CDA2.idx  fmt_helper.h.B4505E4E719AB6C9.idx  (+77 more)
coil/: CMakeLists.txt
coil-daemon/: CMakeLists.txt
coil-daemon/src/: configParser.cpp  configParser.h  dbusServer.cpp  dbusServer.h  main.cpp
coil-lib/: CMakeLists.txt
coil/src/: main.cpp
example-files/.config/coil/: config.json
example-files/etc/coil/: default.json
